# grocery-prices-api

./: .env.example  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
app/: config.py  crud.py  database.py  main.py  models.py  routes.py
app/migrations/: env.py
app/migrations/versions/: fd6dfab76140_initial_schema.py
